--- a/templates/index.html
+++ b/templates/index.html
@@ -1,112 +1,21 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>炫酷jQuery和SVG遮罩轮播图特效</title>
+{% extends 'head.html' %}
 
-    <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/search-form.css">
-    <!--必要样式-->
+{% block content %}
 
-    <link rel="stylesheet" type="text/css" href="/static/css/index.css">
-    <link rel="stylesheet" href="/static/css/slider.css">
-    <link rel="stylesheet" href="/static/css/main.css">
-</head>
+    <div class="container">
+        <form onsubmit="submitFn(this, event);">
+            <div class="search-wrapper active">
+                <div class="input-holder">
+                    <input type="text" class="search-input" placeholder="Type to search"/>
+                    <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
+                </div>
 
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
+                <div class="result-container">
 
-    li {
-        list-style: none;
-    }
-
-    .clear {
-        clear: both;
-    }
-
-    .menus {
-        width: 750px;
-        margin: 40px auto;
-    }
-
-    .menus ul {
-        width: 750px;
-        border-bottom: 2px solid #009FE9;
-        position: relative;
-        float: left;
-    }
-
-    .menus li {
-        float: left;
-        width: 150px;
-        height: 40px;
-        line-height: 40px;
-        text-align: center;
-        cursor: pointer;
-        -webkit-transition: all 0.5s;
-        -moz-transition: all 0.5s;
-        -ms-transition: all 0.5s;
-        -o-transition: all 0.5s;
-        transition: all 0.5s;
-    }
-
-    .menus li:nth-child(2) {
-        color: #fff;
-    }
-
-    .menus li span {
-        font-size: larger;
-    }
-
-    .menus .bg {
-        width: 150px;
-        height: 40px;
-        position: absolute;
-        left: 0;
-        top: 0;
-        z-index: -1;
-        -webkit-transition: all 0.5s;
-        -moz-transition: all 0.5s;
-        -ms-transition: all 0.5s;
-        -o-transition: all 0.5s;
-        transition: all 0.5s;
-    }
-</style>
-<body style="margin:0">
-
-<div class="menus menus0">
-    <ul>
-        <div class="bg"></div>
-        <li><span>首页</span></li>
-        <li><span>排行</span></li>
-        <li><span>话题</span></li>
-        <li><span>市场</span></li>
-        <li><span>个人</span></li>
-    </ul>
-
-    <div class="clear"></div>
-</div>
-
-
-<div class="container">
-    <form onsubmit="submitFn(this, event);">
-        <div class="search-wrapper active">
-            <div class="input-holder">
-                <input type="text" class="search-input" placeholder="Type to search"/>
-                <button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
+                </div>
             </div>
-
-            <div class="result-container">
-
-            </div>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
 
 
 <div class="portfolio slider-wrapper" style="margin: 0">
@@ -260,39 +169,31 @@
 </div>
 
 
-</body>
+
+{% endblock %}
 
 
-<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-<script src="/static/js/libs/jquery.mobile.custom.min.js" type="text/javascript"></script>
-<script src="/static/js/libs/snap.svg-min.js" type="text/javascript"></script>
-<script src="/static/js/libs/bootstrap.min.js" type="text/javascript"></script>
-<script src='/static/js/TweenMax.min.js' type="text/javascript"></script>
-<script src="/static/js/slider.js" type="text/javascript"></script>
+{% block js %}
+    <script>
 
-<script src="/static/js/index.js" type="text/javascript"></script>
 
-<script type="text/javascript">
-    function searchToggle(obj, evt) {
-        var container = $(obj).closest('.search-wrapper');
+    $(function(){
+        $('.menus li').eq(0).css('color','#ff4941');
+    //无点击效果
+    $('.menus li').each(function(){
+        $('.menus li').mouseover(function(){
+            var index = $(this).index();
+            $('.menus .bg').css('left',(index-1)*150+'px');
+            $('.menus li').css('color','#000');
+            $(this).css('color','#ff4941');
+        });
+        $('.menus li').mouseout(function(){
+            $('.menus li').css('color','#000');
+            $('.menus .bg').css('left','0');
+            $('.menus li').eq(0).css('color','#ff4941');
+        });
+    })
+});
 
-        if (!container.hasClass('active')) {
-            container.addClass('active');
-            evt.preventDefault();
-        }
-        else if (container.hasClass('active') && $(obj).closest('.input-holder').length == 0) {
-            container.removeClass('active');
-            container.find('.search-input').val('');
-            container.find('.result-container').fadeOut(100, function () {
-                $(this).empty();
-            });
-        }
-    }
-
-    function submitFn(obj, evt) {
-
-        //todo:
-    }
 </script>
-
-</html>
+{% endblock %}
