--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>创建新项目</title>
-</head>
+{% extends 'head.html' %}
+
+{% block css %}
 
 <link crossorigin="anonymous" media="all"
       integrity="sha512-lLo2nlsdl+bHLu6PGvC2j3wfP45RnK4wKQLiPnCDcuXfU38AiD+JCdMywnF3WbJC1jaxe3lAI6AM4uJuMFBLEw=="
@@ -11,7 +8,7 @@
 <link crossorigin="anonymous" media="all"
       integrity="sha512-mv6mDRPrioZTM6DqvWmoRTqzLBRhHXVLHuh4NbZvbWLfjVpC7gqihEHCfY+IR3fRoQ3KD7FLLz422a7iH/HT/g=="
       rel="stylesheet" href="https://assets-cdn.github.com/assets/github-4d9ab9919c1f80062f9616df3655449f.css"/>
-<body>
+{% endblock %}
 
 {##}
 {#    <form action="" method="post" enctype="multipart/form-data">#}
@@ -19,9 +16,9 @@
 {#        <input type="file" name="excel">#}
 {#        <button type="submit">提交</button>#}
 {#    </form>#}
-
+{% block content %}
 <form class="js-braintree-encrypt" id="new_repository"
-      action="" accept-charset="UTF-8" method="post" style="margin-left:200px;margin-right: 200px;width:50%">
+      action="" accept-charset="UTF-8" method="post" style="margin:auto;margin-top: 200px;width:500px">
     {% csrf_token %}
     <div class="Subhead">
         <h2 class="Subhead-heading">Create a new project</h2>
@@ -87,5 +84,4 @@
         </button>
     </div>
 </form>
-</body>
-</html>
+{% endblock %}
