--- a/templates/head.html
+++ b/templates/head.html
@@ -2,16 +2,15 @@
 
 
 {% block js %}
-
-
     <script src="/static/js/libs/jquery.mobile.custom.min.js" type="text/javascript"></script>
     <script src="/static/js/libs/snap.svg-min.js" type="text/javascript"></script>
     <script src="/static/js/libs/bootstrap.min.js" type="text/javascript"></script>
     <script src='/static/js/TweenMax.min.js' type="text/javascript"></script>
     <script src="/static/js/slider.js" type="text/javascript"></script>
-
     <script src="/static/js/index.js" type="text/javascript"></script>
 
+    {% block jss %}
+    {% endblock %}
 {% endblock %}
 {% block css %}
 
@@ -22,7 +21,8 @@
     <link rel="stylesheet" type="text/css" href="/static/css/index.css">
     <link rel="stylesheet" href="/static/css/slider.css">
     <link rel="stylesheet" href="/static/css/main.css">
-
+{% block csss %}
+    {% endblock %}
 {% endblock %}
 
 {% block head %}
