--- a/templates/test.html
+++ b/templates/test.html
@@ -1,20 +1,96 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<script src="/static/js/jquery-2.2.4.min%20.js"></script>
-
-<script>
-
-    var url = "http://127.0.0.1:8000/media/excels/example.csv";
-	 var htmlobj= $.ajax({url:url,async:false});
-	 var dataString = htmlobj.responseText;
-
-	 document.write(dataString);
-</script>
-<body>
-
-</body>
-</html>
+ValueError at /login/↵The view dynamic.views.login didn't return an HttpResponse object. It returned None instead.↵↵Request Method: POST↵Request URL: http://127.0.0.1:8000/login/↵Django Version: 2.0↵Python Executable: /Users/oswin/Documents/venv/bin/python3.7↵Python Version: 3.7.0↵Python Path: ['/Users/oswin/Documents/gitdata', '/Users/oswin/Documents/gitdata', '/Users/oswin/Documents/venv/lib/python37.zip', '/Users/oswin/Documents/venv/lib/python3.7', '/Users/oswin/Documents/venv/lib/python3.7/lib-dynload', '/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7', '/Users/oswin/Documents/venv/lib/python3.7/site-packages', '/Applications/PyCharm.app/Contents/helpers/pycharm_matplotlib_backend', '/Users/oswin/Documents/venv/lib/python3.7/site-packages/odf', '/Users/oswin/Documents/venv/lib/python3.7/site-packages/odf', '/Users/oswin/Documents/venv/lib/python3.7/site-packages/odf', '/Users/oswin/Documents/venv/lib/python3.7/site-packages/odf', '/Users/oswin/Documents/venv/lib/python3.7/site-packages/odf', '/Users/oswin/Documents/venv/lib/python3.7/site-packages/odf', '/Users/oswin/Documents/venv/lib/python3.7/site-packages/odf']↵Server time: 星期一, 26 十一月 2018 16:23:47 +0800↵Installed Applications:↵['django.contrib.admin',↵ 'django.contrib.auth',↵ 'django.contrib.contenttypes',↵ 'django.contrib.sessions',↵ 'django.contrib.messages',↵ 'django.contrib.staticfiles',↵ 'xadmin',↵ 'crispy_forms',↵ 'dynamic']↵Installed Middleware:↵['django.middleware.security.SecurityMiddleware',↵ 'django.contrib.sessions.middleware.SessionMiddleware',↵ 'django.middleware.common.CommonMiddleware',↵ 'django.middleware.csrf.CsrfViewMiddleware',↵ 'django.contrib.auth.middleware.AuthenticationMiddleware',↵ 'django.contrib.messages.middleware.MessageMiddleware',↵ 'django.middleware.clickjacking.XFrameOptionsMiddleware']↵↵↵Traceback:↵↵File "/Users/oswin/Documents/venv/lib/python3.7/site-packages/django/core/handlers/exception.py" in inner↵  35.             response = get_response(request)↵↵File "/Users/oswin/Documents/venv/lib/python3.7/site-packages/django/core/handlers/base.py" in _get_response↵  139.                 "returned None instead." % (callback.__module__, view_name)↵↵Exception Type: ValueError at /login/↵Exception Value: The view dynamic.views.login didn't return an HttpResponse object. It returned None instead.↵Request information:↵USER: AnonymousUser↵↵GET: No GET data↵↵POST:↵username = 'root'↵password = 'root1234'↵↵FILES: No FILES data↵↵COOKIES:↵csrftoken = '0Jshga4aonDhhHAaAfGyt14RXgZ6nvrTPNDkplcOJuKfOASbHUm7hynYwwk8vhMg'↵↵META:↵Apple_PubSub_Socket_Render = '/private/tmp/com.apple.launchd.71ZJFPcZZW/Render'↵CONTENT_LENGTH = '31'↵CONTENT_TYPE = 'application/x-www-form-urlencoded; charset=UTF-8'↵CSRF_COOKIE = '0Jshga4aonDhhHAaAfGyt14RXgZ6nvrTPNDkplcOJuKfOASbHUm7hynYwwk8vhMg'↵DJANGO_SETTINGS_MODULE = 'gitdata.settings'↵GATEWAY_INTERFACE = 'CGI/1.1'↵HOME = '/Users/oswin'↵HTTP_ACCEPT = 'text/plain, */*; q=0.01'↵HTTP_ACCEPT_ENCODING = 'gzip, deflate, br'↵HTTP_ACCEPT_LANGUAGE = 'zh-CN,zh;q=0.9'↵HTTP_CONNECTION = 'keep-alive'↵HTTP_COOKIE = 'csrftoken=0Jshga4aonDhhHAaAfGyt14RXgZ6nvrTPNDkplcOJuKfOASbHUm7hynYwwk8vhMg'↵HTTP_DNT = '1'↵HTTP_HOST = '127.0.0.1:8000'↵HTTP_ORIGIN = 'http://127.0.0.1:8000'↵HTTP_REFERER = 'http://127.0.0.1:8000/login_register/'↵HTTP_USER_AGENT = 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.102 Safari/537.36'↵HTTP_X_CSRFTOKEN = '0Jshga4aonDhhHAaAfGyt14RXgZ6nvrTPNDkplcOJuKfOASbHUm7hynYwwk8vhMg'↵HTTP_X_REQUESTED_WITH = 'XMLHttpRequest'↵LC_CTYPE = 'UTF-8'↵LESS = '-R'↵LOGNAME = 'oswin'↵LSCOLORS = 'Gxfxcxdxbxegedabagacad'↵OLDPWD = '/Applications/PyCharm.app/Contents/bin'↵PAGER = 'less'↵PATH = '/Users/oswin/Documents/venv/bin:/Library/Frameworks/Python.framework/Versions/3.7/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin'↵PATH_INFO = '/login/'↵PS1 = '(venv) '↵PWD = '/Users/oswin/Documents/gitdata'↵PYCHARM_HOSTED = '1'↵PYCHARM_MATPLOTLIB_PORT = '50599'↵PYTHONIOENCODING = 'UTF-8'↵PYTHONPATH = '/Applications/PyCharm.app/Contents/helpers/pycharm_matplotlib_backend:/Users/oswin/Documents/gitdata'↵PYTHONUNBUFFERED = '1'↵QUERY_STRING = ''↵REMOTE_ADDR = '127.0.0.1'↵REMOTE_HOST = ''↵REQUEST_METHOD = 'POST'↵RUN_MAIN = 'true'↵SCRIPT_NAME = ''↵SERVER_NAME = '1.0.0.127.in-addr.arpa'↵SERVER_PORT = '8000'↵SERVER_PROTOCOL = 'HTTP/1.1'↵SERVER_SOFTWARE = 'WSGIServer/0.2'↵SHELL = '/bin/zsh'↵SSH_AUTH_SOCK = '/private/tmp/com.apple.launchd.UhvCWt2Jhm/Listeners'↵TMPDIR = '/var/folders/ny/3xcf53gd25s6_hpn9x6dw8_00000gn/T/'↵TZ = 'Asia/Shanghai'↵USER = 'oswin'↵VERSIONER_PYTHON_PREFER_32_BIT = 'no'↵VERSIONER_PYTHON_VERSION = '2.7'↵VIRTUAL_ENV = '/Users/oswin/Documents/venv'↵XPC_FLAGS = '0x0'↵XPC_SERVICE_NAME = 'com.jetbrains.pycharm.14600'↵ZSH = '/Users/oswin/.oh-my-zsh'↵__CF_USER_TEXT_ENCODING = '0x1F5:0x19:0x34'↵wsgi.errors =
+<_io.TextIOWrapper name='<stderr>' mode='w' encoding='UTF-8'>↵wsgi.file_wrapper = ''↵wsgi.input =
+    <_io.BufferedReader name=6>↵wsgi.multiprocess = False↵wsgi.multithread = True↵wsgi.run_once = False↵wsgi.url_scheme
+        = 'http'↵wsgi.version = '(1, 0)'↵↵Settings:↵Using settings module gitdata.settings↵ABSOLUTE_URL_OVERRIDES =
+        {}↵ADMINS = []↵ALLOWED_HOSTS = []↵APPEND_SLASH = True↵AUTHENTICATION_BACKENDS =
+        ['django.contrib.auth.backends.ModelBackend']↵AUTH_PASSWORD_VALIDATORS = '********************'↵AUTH_USER_MODEL
+        = 'dynamic.User'↵BASE_DIR = '/Users/oswin/Documents/gitdata'↵CACHES = {'default': {'BACKEND':
+        'django.core.cache.backends.locmem.LocMemCache'}}↵CACHE_MIDDLEWARE_ALIAS = 'default'↵CACHE_MIDDLEWARE_KEY_PREFIX
+        = '********************'↵CACHE_MIDDLEWARE_SECONDS = 600↵CRISPY_CLASS_CONVERTERS = {'textinput': 'textinput
+        textInput form-control', 'fileinput': 'fileinput fileUpload form-control', 'passwordinput':
+        '********************'}↵CRISPY_TEMPLATE_PACK = 'bootstrap3'↵CSRF_COOKIE_AGE = 31449600↵CSRF_COOKIE_DOMAIN =
+        None↵CSRF_COOKIE_HTTPONLY = False↵CSRF_COOKIE_NAME = 'csrftoken'↵CSRF_COOKIE_PATH = '/'↵CSRF_COOKIE_SECURE =
+        False↵CSRF_FAILURE_VIEW = 'django.views.csrf.csrf_failure'↵CSRF_HEADER_NAME =
+        'HTTP_X_CSRFTOKEN'↵CSRF_TRUSTED_ORIGINS = []↵CSRF_USE_SESSIONS = False↵DATABASES = {'default': {'ENGINE':
+        'django.db.backends.mysql', 'NAME': 'gitdata', 'USER': 'root', 'PASSWORD': '********************', 'HOST':
+        '39.105.205.150', 'PORT': '3306', 'ATOMIC_REQUESTS': False, 'AUTOCOMMIT': True, 'CONN_MAX_AGE': 0, 'OPTIONS':
+        {}, 'TIME_ZONE': None, 'TEST': {'CHARSET': None, 'COLLATION': None, 'NAME': None, 'MIRROR':
+        None}}}↵DATABASE_ROUTERS = []↵DATA_UPLOAD_MAX_MEMORY_SIZE = 2621440↵DATA_UPLOAD_MAX_NUMBER_FIELDS =
+        1000↵DATETIME_FORMAT = 'N j, Y, P'↵DATETIME_INPUT_FORMATS = ['%Y-%m-%d %H:%M:%S', '%Y-%m-%d %H:%M:%S.%f',
+        '%Y-%m-%d %H:%M', '%Y-%m-%d', '%m/%d/%Y %H:%M:%S', '%m/%d/%Y %H:%M:%S.%f', '%m/%d/%Y %H:%M', '%m/%d/%Y',
+        '%m/%d/%y %H:%M:%S', '%m/%d/%y %H:%M:%S.%f', '%m/%d/%y %H:%M', '%m/%d/%y']↵DATE_FORMAT = 'N j,
+        Y'↵DATE_INPUT_FORMATS = ['%Y-%m-%d', '%m/%d/%Y', '%m/%d/%y', '%b %d %Y', '%b %d, %Y', '%d %b %Y', '%d %b, %Y',
+        '%B %d %Y', '%B %d, %Y', '%d %B %Y', '%d %B, %Y']↵DEBUG = True↵DEBUG_PROPAGATE_EXCEPTIONS =
+        False↵DECIMAL_SEPARATOR = '.'↵DEFAULT_CHARSET = 'utf-8'↵DEFAULT_CONTENT_TYPE =
+        'text/html'↵DEFAULT_EXCEPTION_REPORTER_FILTER =
+        'django.views.debug.SafeExceptionReporterFilter'↵DEFAULT_FILE_STORAGE =
+        'django.core.files.storage.FileSystemStorage'↵DEFAULT_FROM_EMAIL =
+        'webmaster@localhost'↵DEFAULT_INDEX_TABLESPACE = ''↵DEFAULT_TABLESPACE = ''↵DISALLOWED_USER_AGENTS =
+        []↵EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'↵EMAIL_HOST = 'localhost'↵EMAIL_HOST_PASSWORD =
+        '********************'↵EMAIL_HOST_USER = ''↵EMAIL_PORT = 25↵EMAIL_SSL_CERTFILE = None↵EMAIL_SSL_KEYFILE =
+        '********************'↵EMAIL_SUBJECT_PREFIX = '[Django] '↵EMAIL_TIMEOUT = None↵EMAIL_USE_LOCALTIME =
+        False↵EMAIL_USE_SSL = False↵EMAIL_USE_TLS = False↵FILE_CHARSET = 'utf-8'↵FILE_UPLOAD_DIRECTORY_PERMISSIONS =
+        None↵FILE_UPLOAD_HANDLERS = ['django.core.files.uploadhandler.MemoryFileUploadHandler',
+        'django.core.files.uploadhandler.TemporaryFileUploadHandler']↵FILE_UPLOAD_MAX_MEMORY_SIZE =
+        2621440↵FILE_UPLOAD_PERMISSIONS = None↵FILE_UPLOAD_TEMP_DIR = None↵FIRST_DAY_OF_WEEK = 0↵FIXTURE_DIRS =
+        []↵FORCE_SCRIPT_NAME = None↵FORMAT_MODULE_PATH = None↵FORM_RENDERER =
+        'django.forms.renderers.DjangoTemplates'↵IGNORABLE_404_URLS = []↵INSTALLED_APPS = ['django.contrib.admin',
+        'django.contrib.auth', 'django.contrib.contenttypes', 'django.contrib.sessions', 'django.contrib.messages',
+        'django.contrib.staticfiles', 'xadmin', 'crispy_forms', 'dynamic']↵INTERNAL_IPS = []↵LANGUAGES = [('af',
+        'Afrikaans'), ('ar', 'Arabic'), ('ast', 'Asturian'), ('az', 'Azerbaijani'), ('bg', 'Bulgarian'), ('be',
+        'Belarusian'), ('bn', 'Bengali'), ('br', 'Breton'), ('bs', 'Bosnian'), ('ca', 'Catalan'), ('cs', 'Czech'),
+        ('cy', 'Welsh'), ('da', 'Danish'), ('de', 'German'), ('dsb', 'Lower Sorbian'), ('el', 'Greek'), ('en',
+        'English'), ('en-au', 'Australian English'), ('en-gb', 'British English'), ('eo', 'Esperanto'), ('es',
+        'Spanish'), ('es-ar', 'Argentinian Spanish'), ('es-co', 'Colombian Spanish'), ('es-mx', 'Mexican Spanish'),
+        ('es-ni', 'Nicaraguan Spanish'), ('es-ve', 'Venezuelan Spanish'), ('et', 'Estonian'), ('eu', 'Basque'), ('fa',
+        'Persian'), ('fi', 'Finnish'), ('fr', 'French'), ('fy', 'Frisian'), ('ga', 'Irish'), ('gd', 'Scottish Gaelic'),
+        ('gl', 'Galician'), ('he', 'Hebrew'), ('hi', 'Hindi'), ('hr', 'Croatian'), ('hsb', 'Upper Sorbian'), ('hu',
+        'Hungarian'), ('ia', 'Interlingua'), ('id', 'Indonesian'), ('io', 'Ido'), ('is', 'Icelandic'), ('it',
+        'Italian'), ('ja', 'Japanese'), ('ka', 'Georgian'), ('kab', 'Kabyle'), ('kk', 'Kazakh'), ('km', 'Khmer'), ('kn',
+        'Kannada'), ('ko', 'Korean'), ('lb', 'Luxembourgish'), ('lt', 'Lithuanian'), ('lv', 'Latvian'), ('mk',
+        'Macedonian'), ('ml', 'Malayalam'), ('mn', 'Mongolian'), ('mr', 'Marathi'), ('my', 'Burmese'), ('nb', 'Norwegian
+        Bokmål'), ('ne', 'Nepali'), ('nl', 'Dutch'), ('nn', 'Norwegian Nynorsk'), ('os', 'Ossetic'), ('pa', 'Punjabi'),
+        ('pl', 'Polish'), ('pt', 'Portuguese'), ('pt-br', 'Brazilian Portuguese'), ('ro', 'Romanian'), ('ru',
+        'Russian'), ('sk', 'Slovak'), ('sl', 'Slovenian'), ('sq', 'Albanian'), ('sr', 'Serbian'), ('sr-latn', 'Serbian
+        Latin'), ('sv', 'Swedish'), ('sw', 'Swahili'), ('ta', 'Tamil'), ('te', 'Telugu'), ('th', 'Thai'), ('tr',
+        'Turkish'), ('tt', 'Tatar'), ('udm', 'Udmurt'), ('uk', 'Ukrainian'), ('ur', 'Urdu'), ('vi', 'Vietnamese'),
+        ('zh-hans', 'Simplified Chinese'), ('zh-hant', 'Traditional Chinese')]↵LANGUAGES_BIDI = ['he', 'ar', 'fa',
+        'ur']↵LANGUAGE_CODE = 'zh-hans'↵LANGUAGE_COOKIE_AGE = None↵LANGUAGE_COOKIE_DOMAIN = None↵LANGUAGE_COOKIE_NAME =
+        'django_language'↵LANGUAGE_COOKIE_PATH = '/'↵LOCALE_PATHS = []↵LOGGING = {}↵LOGGING_CONFIG =
+        'logging.config.dictConfig'↵LOGIN_REDIRECT_URL = '/accounts/profile/'↵LOGIN_URL =
+        '/accounts/login/'↵LOGOUT_REDIRECT_URL = None↵MANAGERS = []↵MEDIA_ROOT =
+        '/Users/oswin/Documents/gitdata/media'↵MEDIA_URL = ''↵MESSAGE_STORAGE =
+        'django.contrib.messages.storage.fallback.FallbackStorage'↵MIDDLEWARE =
+        ['django.middleware.security.SecurityMiddleware', 'django.contrib.sessions.middleware.SessionMiddleware',
+        'django.middleware.common.CommonMiddleware', 'django.middleware.csrf.CsrfViewMiddleware',
+        'django.contrib.auth.middleware.AuthenticationMiddleware',
+        'django.contrib.messages.middleware.MessageMiddleware',
+        'django.middleware.clickjacking.XFrameOptionsMiddleware']↵MIGRATION_MODULES = {}↵MONTH_DAY_FORMAT = 'F
+        j'↵NUMBER_GROUPING = 0↵PASSWORD_HASHERS = '********************'↵PASSWORD_RESET_TIMEOUT_DAYS =
+        '********************'↵PREPEND_WWW = False↵ROOT_URLCONF = 'gitdata.urls'↵SECRET_KEY =
+        '********************'↵SECURE_BROWSER_XSS_FILTER = False↵SECURE_CONTENT_TYPE_NOSNIFF =
+        False↵SECURE_HSTS_INCLUDE_SUBDOMAINS = False↵SECURE_HSTS_PRELOAD = False↵SECURE_HSTS_SECONDS =
+        0↵SECURE_PROXY_SSL_HEADER = None↵SECURE_REDIRECT_EXEMPT = []↵SECURE_SSL_HOST = None↵SECURE_SSL_REDIRECT =
+        False↵SERVER_EMAIL = 'root@localhost'↵SESSION_CACHE_ALIAS = 'default'↵SESSION_COOKIE_AGE =
+        1209600↵SESSION_COOKIE_DOMAIN = None↵SESSION_COOKIE_HTTPONLY = True↵SESSION_COOKIE_NAME =
+        'sessionid'↵SESSION_COOKIE_PATH = '/'↵SESSION_COOKIE_SECURE = False↵SESSION_ENGINE =
+        'django.contrib.sessions.backends.db'↵SESSION_EXPIRE_AT_BROWSER_CLOSE = False↵SESSION_FILE_PATH =
+        None↵SESSION_SAVE_EVERY_REQUEST = False↵SESSION_SERIALIZER =
+        'django.contrib.sessions.serializers.JSONSerializer'↵SETTINGS_MODULE = 'gitdata.settings'↵SHORT_DATETIME_FORMAT
+        = 'm/d/Y P'↵SHORT_DATE_FORMAT = 'm/d/Y'↵SIGNING_BACKEND =
+        'django.core.signing.TimestampSigner'↵SILENCED_SYSTEM_CHECKS = []↵STATICFILES_DIRS =
+        ['/Users/oswin/Documents/gitdata/static']↵STATICFILES_FINDERS =
+        ['django.contrib.staticfiles.finders.FileSystemFinder',
+        'django.contrib.staticfiles.finders.AppDirectoriesFinder']↵STATICFILES_STORAGE =
+        'django.contrib.staticfiles.storage.StaticFilesStorage'↵STATIC_ROOT = None↵STATIC_URL = '/static/'↵TEMPLATES =
+        [{'BACKEND': 'django.template.backends.django.DjangoTemplates', 'DIRS':
+        ['/Users/oswin/Documents/gitdata/templates'], 'APP_DIRS': True, 'OPTIONS': {'context_processors':
+        ['django.template.context_processors.debug', 'django.template.context_processors.request',
+        'django.contrib.auth.context_processors.auth',
+        'django.contrib.messages.context_processors.messages']}}]↵TEST_NON_SERIALIZED_APPS = []↵TEST_RUNNER =
+        'django.test.runner.DiscoverRunner'↵THOUSAND_SEPARATOR = ','↵TIME_FORMAT = 'P'↵TIME_INPUT_FORMATS = ['%H:%M:%S',
+        '%H:%M:%S.%f', '%H:%M']↵TIME_ZONE = 'Asia/Shanghai'↵USE_ETAGS = False↵USE_I18N = True↵USE_L10N =
+        True↵USE_THOUSAND_SEPARATOR = False↵USE_TZ = False↵USE_X_FORWARDED_HOST = False↵USE_X_FORWARDED_PORT =
+        False↵WSGI_APPLICATION = 'gitdata.wsgi.application'↵X_FRAME_OPTIONS = 'SAMEORIGIN'↵YEAR_MONTH_FORMAT = 'F
+        Y'↵↵↵You're seeing this error because you have DEBUG = True in your↵Django settings file. Change that to False,
+        and Django will↵display a standard page generated by the handler for this status code.↵↵
