--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,1 +1,41 @@
-body,html{height:100%}body{font-family:'Montserrat',sans-serif;font-size:14px;color:#37474f}.text__first,.text__second{position:relative}.text__word{opacity:0}.text__first-bg,.text__second-bg{display:block;width:100%;height:100%;position:absolute;left:0;top:0;z-index:100;-webkit-transform-origin:left;-ms-transform-origin:left;transform-origin:left;-webkit-transform:scaleX(0);-ms-transform:scaleX(0);transform:scaleX(0)}.text__first-bg{background-color:#5fbff9}.text__second-bg{background-color:#f06543}
+body, html {
+    height: 100%
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    color: #37474f
+}
+
+.text__first, .text__second {
+    position: relative
+}
+
+.text__word {
+    opacity: 0
+}
+
+.text__first-bg, .text__second-bg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0)
+}
+
+.text__first-bg {
+    background-color: #5fbff9
+}
+
+.text__second-bg {
+    background-color: #f06543
+}
