--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -11,7 +11,7 @@
         function login() {
             let username = $('#login_username').val();
             let password = $('#login_register').val();
-            if (username == '' || password == ''){
+            if (username == '' || password == '') {
                 alert("用户名或密码不可为空");
                 return;
             }
@@ -29,7 +29,9 @@
                         } else {
                             self.location = '/';
                         }
-                    }else{
+                    } else if (result == 'noactive') {
+                        alert("用户未激活，请确认邮件")
+                    } else {
                         alert("登录失败，请重试");
                     }
                 },
@@ -43,21 +45,21 @@
         function register() {
             let username = $('#register_username').val();
             let email = $('#register_email').val();
-            let password1= $('#register_password1').val();
-            let password2= $('#register_password2').val();
+            let password1 = $('#register_password1').val();
+            let password2 = $('#register_password2').val();
 
-            if (username == '' || password1==''){
+            if (username == '' || password1 == '') {
                 alert("用户名和密码不可为空");
                 return;
             }
-            if(password1!=password2){
+            if (password1 != password2) {
                 alert("两次密码不一致");
                 return;
             }
 
             $.ajax({
                 url:{% url "register" %},
-                data: {'username': username,'email':email ,'password': password1},
+                data: {'username': username, 'email': email, 'password': password1},
                 method: 'post',
                 dataType: "text",
                 success: function (result) {
@@ -65,10 +67,11 @@
                     if (result == 'success') {
                         if (confirm("注册成功,请重新登录")) {
                             history.go(-1);
-                        } else {
+                        }
+                        else {
                             self.location = '/';
                         }
-                    }else{
+                    } else {
                         alert("注册失败，请重试");
                     }
                 },
