--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -6,6 +6,14 @@
     <title>用户中心</title>
     <link rel="stylesheet" type="text/css" href="../static/css/iconfont.css"/>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -29,7 +37,9 @@
                 </p>
             </div>
             <div class="user-modify">
-                <a href="#">修改资料></a>
+                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"
+                        style="font-size: 12px">修改个人信息
+                </button>
             </div>
         </div>
     </div>
@@ -94,5 +104,34 @@
     </div>
 </div>
 </body>
-
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">个人信息</h4>
+            </div>
+            <div class="modal-body">
+                <div id="username">
+                    <label style="vertical-align: inherit;">用户名:</label>
+                    <input type="text" name="uname" id="uname">
+                </div>
+                <div id="password">
+                    <label style="vertical-align: inherit;">原密码:</label>
+                    <input type="password" name="password" id="password"><br>
+                    <label style="vertical-align: inherit;">新密码:</label>
+                    <input type="password" name="newpassword1" id="newpassword">
+                </div>
+                <div id="email">
+                    <label style="vertical-align: inherit;">&nbsp;&nbsp;&nbsp;邮箱:</label>
+                    <input type="email" name="email" id="email">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary">提交更改</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
 </html>
