--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -109,21 +109,21 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">个人信息</h4>
+                <h4 class="modal-title" id="myModalLabel"><span class="glyphicon glyphicon-pencil">个人信息</span></h4>
             </div>
             <div class="modal-body">
                 <div id="username">
-                    <label style="vertical-align: inherit;">用户名:</label>
-                    <input type="text" name="uname" id="uname">
+                    <span class="glyphicon glyphicon-user"><label style="vertical-align: inherit;">用户名:</label></span>
+                    <input type="text" name="uname" id="uname"><br>
                 </div>
                 <div id="password">
-                    <label style="vertical-align: inherit;">原密码:</label>
+                    <span class="glyphicon glyphicon-lock"><label style="vertical-align: inherit;">原密码:</label></span>
                     <input type="password" name="password" id="password"><br>
-                    <label style="vertical-align: inherit;">新密码:</label>
-                    <input type="password" name="newpassword1" id="newpassword">
+                    <span class="glyphicon glyphicon-lock"><label style="vertical-align: inherit;">新密码:</label></span>
+                    <input type="password" name="newpassword" id="newpassword"><br>
                 </div>
                 <div id="email">
-                    <label style="vertical-align: inherit;">&nbsp;&nbsp;&nbsp;邮箱:</label>
+                    <span class="glyphicon glyphicon-envelope"><label style="vertical-align: inherit;">&nbsp;&nbsp;&nbsp;邮箱:</label></span>
                     <input type="email" name="email" id="email">
                 </div>
             </div>
