--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -49,9 +49,8 @@
         <ul>
             <li>
                 <a href="#" class="active">
-                    <i class="icon iconfont icon-lingdang"></i>
-                    消息
-                </a>
+                    <i class="icon iconfont icon-lingdang"></i>消息
+                    <span class="badge">42</span></a>
             </li>
             <li>
                 <a href="#">
@@ -131,8 +130,8 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                 <button type="button" class="btn btn-primary" onclick="modifyuserinfo()">提交更改</button>
             </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
+        </div>
+    </div>
 </div>
 
 <script>
