--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -30,10 +30,9 @@
                 <img src="../static/images/male-130.png"/>
             </div>
             <div class="user-account">
-                <p class="tip">下午好，Tom</p>
+                <p class="tip">下午好，{{ user.username }}</p>
                 <p class="account">
-                    <span>帐户名：Tom</span>
-                    <span>用户：tomandjerry</span>
+                    <span>帐户名：{{ user.username }}</span>
                 </p>
             </div>
             <div class="user-modify">
