修复邮箱验证

--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -34,7 +34,7 @@
                     } else if (result === 'noactive') {
                         alert("用户未激活，请确认邮件")
                     } else if(result === 'fail'){
-                        alert("用户名或密码错误or用户未激活，请重试");
+                        alert("用户名或密码错误，请重试");
                     }
                 },
                 error: function (result) {
