--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -45,11 +45,14 @@
                 <p class="account">
                     <span>帐户名：{{ user.username }}</span>
                 </p>
+
             </div>
             <div class="user-modify">
+
                 <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"
                         style="font-size: 12px">修改个人信息
                 </button>
+
             </div>
         </div>
     </div>
@@ -61,7 +64,12 @@
                 <a href="#" class="active">
                     <i class="icon iconfont icon-lingdang"></i>个人项目
                 </a>
+            </li>
+            <a href="{% url "upload" %}">
+                <button class="btn btn-primary btn-lg">上传文件</button>
+            </a>
         </ul>
+
     </div>
     <div class="right">
         <div class="tap">
@@ -205,7 +213,6 @@
         let filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/
         if (filter.test(email)) {
             if (username != "" && password != "" && newpassword != "" && email != "") {
-                console.log("OOOO");
                 let data = {"username": username, "password": password, "newpassword": newpassword, "email": email};
                 $.ajax({
                     url: "{% url "modfiyuserinfo" %}",
